syntax = "proto3";

option go_package = "./protos/flashSale_proto";

message FlashSaleProduct {
    string product_id = 1;
    string name = 2;
    string description = 3;
    float original_price = 4;
    float discount_price = 5;
    int32 stock = 6;
    bool is_active = 7;
}

message ProductId{
    string product_id = 1;
    float  descount_price = 2;
}

message FlashSaleEvent {
    string id = 1;
    string name = 2;
    string description = 3;
    string start_time = 4;
    string end_time = 5;
    repeated FlashSaleProduct products = 6;
    bool is_active = 7;
}

message CreateFlashSaleRequest {
    string name = 1;
    string description = 2;
    string start_time = 3;
    string end_time = 4;
    repeated ProductId products = 5;
}

message CreateFlashSaleResponse {
    FlashSaleEvent event = 1;
}

message UpdateFlashSaleRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string start_time = 4;
    string end_time = 5;
    repeated FlashSaleProduct products = 6;
}

message UpdateFlashSaleResponse {
    FlashSaleEvent event = 1;
}

message DeleteFlashSaleRequest {
    string id = 1;
}

message DeleteFlashSaleResponse {
    string message = 1;
}

message ListFlashSalesRequest {}

message ListFlashSalesResponse {
    repeated FlashSaleEvent events = 1;
}

message PurchaseProductRequest {
    string product_id = 1;
    int32 quantity = 2;
    string user_id = 3;
}

message PurchaseProductResponse {
    string message = 1;
    FlashSaleProduct product = 2;
}

message GetActiveFlashSalesRequest {}

message GetActiveFlashSalesResponse {
    repeated FlashSaleEvent active_events = 1;
}

service FlashSaleService {
    rpc CreateFlashSale(CreateFlashSaleRequest) returns (CreateFlashSaleResponse);
    rpc UpdateFlashSale(UpdateFlashSaleRequest) returns (UpdateFlashSaleResponse);
    rpc DeleteFlashSale(DeleteFlashSaleRequest) returns (DeleteFlashSaleResponse);
    rpc ListFlashSales(ListFlashSalesRequest) returns (ListFlashSalesResponse);
    
    rpc GetActiveFlashSales(GetActiveFlashSalesRequest) returns (GetActiveFlashSalesResponse);
    rpc PurchaseProduct(PurchaseProductRequest) returns (PurchaseProductResponse);
}
